--- a/APP/index.html
+++ b/APP/index.html
@@ -13,15 +13,15 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-	
-	<!--
-    <script src="init.js"></script>
-	-->
+
+	<!-- Classes & Scripts -->
+    <script src="framework/init.js"></script>
+    <script src="framework/controller.js"></script>
 
 
 </head>
 
-<body>
+<body onload="init()">
 
 	<div id="menu">
 		<svg id="menusvg"></svg>	
