added temporary buttons to select mode

--- a/APP/index.html
+++ b/APP/index.html
@@ -24,7 +24,10 @@
 <body onload="init()">
 
 	<div id="menu">
-
+		<p>
+			This List is just temporary, until I get the SVG menu to work...
+			However, the click interaction should already work...
+		</p>
 		<ul>
 			<li><a href="#" onclick=context.setMode(context.modes.SELECTION)>SelectionMode</a></li>
 			<li><a href="#" onclick=context.setMode(context.modes.TRAFFICLAYER)>TrafficLayer</a></li>
@@ -35,6 +38,9 @@
 	</div>
 
 	<div id="map">
+		<h1 style="color: orange">
+			TODO: Please draw map here
+		</h1>
 		<svg id="mapsvg"></svg>	
 	</div>
 
