added leaflet stylestheet + UI trial

--- a/APP/index.html
+++ b/APP/index.html
@@ -7,6 +7,7 @@
 
 	<!-- StyleSheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" id="style"/>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 
     <!-- Leaflet and D3-->
@@ -17,13 +18,16 @@
 	<!-- Classes & Scripts -->
     <script src="framework/init.js"></script>
     <script src="framework/controller.js"></script>
+    <script src="framework/drawUI.js"></script>
+    <script src="framework/drawMap.js"></script>
 
 
 </head>
 
 <body onload="init()">
 
-	<div id="menu">
+	<div id="ui">
+		<!--
 		<p>
 			This List is just temporary, until I get the SVG menu to work...
 			However, the click interaction should already work...
@@ -33,15 +37,18 @@
 			<li><a href="#" onclick=context.setMode(context.modes.TRAFFICLAYER)>TrafficLayer</a></li>
 			<li><a href="#" onclick=context.setMode(context.modes.CRIMELAYER)>CrimeLayer</a></li>
 		</ul>
-
-		<svg id="menusvg"></svg>	
+-->
+		<!--
+		<svg id="menu"></svg>
+		<svg id="mapcontrol"></svg>
+		-->
 	</div>
 
 	<div id="map">
 		<h1 style="color: orange">
 			TODO: Please draw map here
 		</h1>
-		<svg id="mapsvg"></svg>	
+		<!-- <svg id="svgmap"></svg> -->
 	</div>
 
 </body>
