minor changes in UI

--- a/APP/index.html
+++ b/APP/index.html
@@ -7,8 +7,8 @@
 
 	<!-- StyleSheets -->
     <link rel="stylesheet" type="text/css" href="css/style.css" id="style"/>
+    <link rel="stylesheet" type="text/css" href="css/ui.css" id="style"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-
 
     <!-- Leaflet and D3-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -28,10 +28,6 @@
 
 	<div id="ui">
 		<!--
-		<p>
-			This List is just temporary, until I get the SVG menu to work...
-			However, the click interaction should already work...
-		</p>
 		<ul>
 			<li><a href="#" onclick=context.setMode(context.modes.SELECTION)>SelectionMode</a></li>
 			<li><a href="#" onclick=context.setMode(context.modes.TRAFFICLAYER)>TrafficLayer</a></li>
@@ -44,12 +40,7 @@
 		-->
 	</div>
 
-	<div id="map">
-		<h1 style="color: orange">
-			TODO: Please draw map here
-		</h1>
-		<!-- <svg id="svgmap"></svg> -->
-	</div>
+	<div id="map"></div>
 
 </body>
 
