moved zoom controls from map to ui

--- a/APP/index.html
+++ b/APP/index.html
@@ -34,13 +34,13 @@
 			<li><a href="#" onclick=context.setMode(context.modes.CRIMELAYER)>CrimeLayer</a></li>
 		</ul>
 -->
-		<!--
-		<svg id="menu"></svg>
-		<svg id="mapcontrol"></svg>
-		-->
+		
+		<div id="divmenu"></div>
+		<div id="divmapcontrol"></div>
+
 	</div>
 
-	<div id="map"></div>
+	<div id="divmap"></div>
 
 </body>
 
