Code to create route on click added to controller.

--- a/APP/index.html
+++ b/APP/index.html
@@ -15,11 +15,18 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
 
+    <!-- MapQuest for routing -->
+    <script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-map.js?key=Fmjtd%7Cluurn962n0%2Cr0%3Do5-9w85da"></script>
+    <script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-routing.js?key=Fmjtd%7Cluurn962n0%2Cr0%3Do5-9w85da"></script>
+
 	<!-- Classes & Scripts -->
     <script src="framework/init.js"></script>
     <script src="framework/controller.js"></script>
     <script src="framework/drawUI.js"></script>
     <script src="framework/drawMap.js"></script>
+
+    <!-- Database -->
+    <script src="data/database.js"></script>
 
 
 </head>
