Added abstract marker class

--- a/APP/index.html
+++ b/APP/index.html
@@ -24,6 +24,7 @@
     <script src="framework/controller.js"></script>
     <script src="framework/drawUI.js"></script>
     <script src="framework/drawMap.js"></script>
+    <script src="framework/markers.js"></script>
 
     <!-- Database -->
     <script src="data/database.js"></script>
