updated status for first week

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Righthererightnow.github.io</title>
+
+
+	<style>
+		.week {
+			padding-left: 5%;
+		}
+		.week > h4 {
+			font-size: 1rem;
+		}
+	</style>
+
+
   </head>
 
   <body>
@@ -39,7 +51,29 @@
 <li>Matthias Untergassmair</li>
 <li>Krishna Bharadwaj</li>
 </ul>
+
+
+	  <h2><a name="progress" class="anchor" href="#progress"><span class="octicon octicon-link"></span></a>Progress</h2>
+
+	  <h3>Friday, November 8, 2014</h3>
+
+	  <div class="week">
+		<h4>Meeting 1,2 and 3</h4>
+		<ul>
+			<li>First look at the data</li>
+			<li>Discussion about layout, controller and framework</li>
+		</ul>
+		
+		<h4>Matthias</h4>
+		<ul>
+			<li>Implemented UI</li> 
+		</ul>
+	</div>
+
+
+
       </section>
+
     </div>
 
     <!-- FOOTER  -->
