--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	  <h2><a name="progress" class="anchor" href="#progress"><span class="octicon octicon-link"></span></a>Progress</h2>
 
-	  <h3>Friday, November 8, 2014</h3>
+	  <h3>Week1 - November 8, 2014</h3>
 
 	  <div class="week">
 		<h4>Meeting 1,2 and 3</h4>
