minor fixes for including marker class

--- a/index.html
+++ b/index.html
@@ -64,9 +64,22 @@
 			<li>Discussion about layout, controller and framework</li>
 		</ul>
 		
+		<h4>Krishna</h4>
+		<ul>
+		</ul>
+
+		<h4>Kyle</h4>
+		<ul>
+		</ul>
+		
+		<h4>Lorenzo</h4>
+		<ul>
+		</ul>
+		
 		<h4>Matthias</h4>
 		<ul>
-			<li>Implemented UI</li> 
+			<li>Implemented UI</li>
+			<li>Created framework dummy functions according to our design decisions</li> 
 		</ul>
 	</div>
 
