made ui an object

--- a/APP/index.html
+++ b/APP/index.html
@@ -28,7 +28,7 @@
 	<!-- Classes & Scripts -->
     <script src="framework/init.js"></script>
     <script src="framework/controller.js"></script>
-    <script src="framework/drawUI.js"></script>
+    <script src="framework/ui.js"></script>
     <script src="framework/drawMap.js"></script>
     <script src="framework/markerFactory.js"></script>
     <!-- Database -->
@@ -39,7 +39,7 @@
 
 <body onload="init()">
 
-	<div id="ui">
+	<div id="divui">
 		<div id="divmenu"></div>
 		<div id="divmapcontrol"></div>
 	</div>
