added work of first week to index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 		
 		<h4>Lorenzo</h4>
 		<ul>
+			<li>Creation of class database and creation of queries to retrieve data</li>
+			<li>Creation of functions to filter and manage the retrieved data</li>
 		</ul>
 		
 		<h4>Matthias</h4>
