--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 		
 		<h4>Krishna</h4>
 		<ul>
+      <li>Creation of Controller Class modules to handle the interaction between different elements of the app.</li>
+      <li>On click route creation on the map using mapQuest routing api</li>
+      <li>Computing perimeter around the path for a given radius to use as filter for data elements</li>
 		</ul>
 
 		<h4>Kyle</h4>
