--- a/APP/index-test.html
+++ b/APP/index-test.html
@@ -25,7 +25,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/leaflet.awesome-markers.js"></script>
-    <script src="framework/markerFactory.js"></script>
+    <script src="framework/markers.js"></script>
     <script>
 
         /**
@@ -40,15 +40,15 @@
         var mapboxURL = 'http://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png'
         var mapboxAttribution = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>'
 
-//        var divyMarker = new AbstractMarker(){latlng: });
-        var divyMarker = new AbstractMarker();
-        divyMarker.setLatLng(L.latLng(41.869912359714654, -87.64772415161133));
-        divyMarker.setIcon(L.AwesomeMarkers.icon({
-            icon: "bicycle",
-            spin:true,
-            markerColor: "blue",
-            iconColor: "white"
-        }));
+        window.divyMarker = new DivvyMarker({latlng: L.latLng(41.869912359714654, -87.64772415161133)});
+//        var divyMarker = new AbstractMarker();
+//        divyMarker.setLatLng(L.latLng(41.869912359714654, -87.64772415161133));
+//        divyMarker.setIcon(L.AwesomeMarkers.icon({
+//            icon: "bicycle",
+//            spin:true,
+//            markerColor: "blue",
+//            iconColor: "white"
+//        }));
 
 
         // Our focus points
@@ -100,10 +100,9 @@
 
 
         map.on('click', onMapClick);
-
-        L.control.layers(baseMaps, overlayMaps).addTo(map);
-
+        console.log(divyMarker.LatLng);
         divyMarker.addTo(map);
+        L.control.layers(baseMaps, overlayMaps).addTo(map);
 
 
     </script>
