Added Map manager class and updated functionality to markers. Still a few bugs to work out of the mapmanager class but I am close.
See the onInit() in Controller to see how to add markers and give them data etc.

For now, just add makers explicitly, will work on adding groups another time.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
 
 		<h4>Kyle</h4>
 		<ul>
+			<li>
+				Creation of Marker Class module for each required data type (crime, pothole, divvy, etc), with tailored
+				functionality for each.
+			</li>
+			<li>
+				Creation of MapManager class which adds a layer of abstraction to the leaflets Map and associated layers.
+				Manages all levels of layers, from layer groups, to individual layers
+			</li>
+
 		</ul>
 		
 		<h4>Lorenzo</h4>
