--- a/APP/index.html
+++ b/APP/index.html
@@ -27,13 +27,14 @@
     <script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-routing.js?key=Fmjtd%7Cluurn962n0%2Cr0%3Do5-9w85da"></script>
 
 	<!-- Classes & Scripts -->
-    <script src="framework/MapManager.js"></script>
+	<!-- <script src="framework/MapManager.js"></script> -->
     <script src="framework/ui.js"></script>
     <script src="framework/controller.js"></script>
     <script src="framework/init.js"></script>
 
 
     <!-- Markers & Maps -->
+	<!--
     <script src="framework/markers/AbstractMarker.js"></script>
     <script src="framework/markers/DivvyMarker.js"></script>
     <script src="framework/markers/AbandonedVehicleMarker.js"></script>
@@ -42,7 +43,7 @@
     <script src="framework/markers/PotholeMarker.js"></script>
     <script src="framework/markers/SimpleMarker.js"></script>
     <script src="framework/markers/markers.js"></script>
-
+	-->
 
     <!-- Database -->
     <script src="data/database.js"></script>
