Added a direct link to the application itself from our project Webpage. It aint pretty, but it works, and should allow us to do some proper testing in the Cyber Commons

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Righthererightnow.github.io : Project 3 repository, cs424">
@@ -11,106 +11,117 @@
     <title>Righthererightnow.github.io</title>
 
 
-	<style>
-		.week {
-			padding-left: 5%;
-		}
-		.week > h4 {
-			font-size: 1rem;
-		}
-	</style>
+    <style>
+        .week {
+            padding-left: 5%;
+        }
+
+        .week > h4 {
+            font-size: 1rem;
+        }
+    </style>
 
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RightHereRightNow">View on GitHub</a>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+    <header class="inner">
+        <a id="forkme_banner" href="https://github.com/RightHereRightNow">View on GitHub</a>
 
-          <h1 id="project_title">Righthererightnow.github.io</h1>
-          <h2 id="project_tagline">Project 3 repository, cs424</h2>
+        <h1 id="project_title">Righthererightnow.github.io</h1>
 
-        </header>
-    </div>
+        <h2 id="project_tagline">Project 3 repository, cs424</h2>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-the-project-page-for-the-right-here-right-now-visualization-app" class="anchor" href="#welcome-to-the-project-page-for-the-right-here-right-now-visualization-app"><span class="octicon octicon-link"></span></a>Welcome to the project page for the Right Here, Right Now visualization app.</h3>
+    </header>
+</div>
 
-<h2>
-<a name="team-members" class="anchor" href="#team-members"><span class="octicon octicon-link"></span></a>Team Members</h2>
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+        <h3><a name="welcome-to-the-project-page-for-the-right-here-right-now-visualization-app" class="anchor"
+               href="#welcome-to-the-project-page-for-the-right-here-right-now-visualization-app"><span
+                class="octicon octicon-link"></span></a>"Welcome to the project page for the Right Here, Right Now"
+            visualization app.
+        </h3>
+        <h2>
+            <a name="team-members" class="anchor" href="#team-members"><span class="octicon octicon-link"></span></a>Team
+            Members
+        </h2>
 
-<ul>
-<li>Kyle Almryde</li>
-<li>Lorenzo Di Tucci</li>
-<li>Matthias Untergassmair</li>
-<li>Krishna Bharadwaj</li>
-</ul>
-
-
-	  <h2><a name="progress" class="anchor" href="#progress"><span class="octicon octicon-link"></span></a>Progress</h2>
-
-	  <h3>Week1 - November 8, 2014</h3>
-
-	  <div class="week">
-		<h4>Meeting 1,2 and 3</h4>
-		<ul>
-			<li>First look at the data</li>
-			<li>Discussion about layout, controller and framework</li>
-		</ul>
-		
-		<h4>Krishna</h4>
-		<ul>
-      <li>Creation of Controller Class modules to handle the interaction between different elements of the app.</li>
-      <li>On click route creation on the map using mapQuest routing api</li>
-      <li>Computing perimeter around the path for a given radius to use as filter for data elements</li>
-		</ul>
-
-		<h4>Kyle</h4>
-		<ul>
-			<li>
-				Creation of Marker Class module for each required data type (crime, pothole, divvy, etc), with tailored
-				functionality for each.
-			</li>
-			<li>
-				Creation of MapManager class which adds a layer of abstraction to the leaflets Map and associated layers.
-				Manages all levels of layers, from layer groups, to individual layers
-			</li>
-
-		</ul>
-		
-		<h4>Lorenzo</h4>
-		<ul>
-			<li>Creation of class database and creation of queries to retrieve data</li>
-			<li>Creation of functions to filter and manage the retrieved data</li>
-		</ul>
-		
-		<h4>Matthias</h4>
-		<ul>
-			<li>Implemented UI</li>
-			<li>Created framework dummy functions according to our design decisions</li> 
-		</ul>
-	</div>
+        <ul>
+            <li>Kyle Almryde</li>
+            <li>Lorenzo Di Tucci</li>
+            <li>Matthias Untergassmair</li>
+            <li>Krishna Bharadwaj</li>
+        </ul>
 
 
+        <h2><a name="progress" class="anchor" href="#progress"><span class="octicon octicon-link"></span></a>Progress
+        </h2>
 
-      </section>
+        <h3>Week1 - November 8, 2014</h3>
 
-    </div>
+        <div class="week">
+            <h4>Meeting 1,2 and 3</h4>
+            <ul>
+                <li>First look at the data</li>
+                <li>Discussion about layout, controller and framework</li>
+            </ul>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+            <h4>Krishna</h4>
+            <ul>
+                <li>Creation of Controller Class modules to handle the interaction between different elements of the
+                    app.
+                </li>
+                <li>On click route creation on the map using mapQuest routing api</li>
+                <li>Computing perimeter around the path for a given radius to use as filter for data elements</li>
+            </ul>
+
+            <h4>Kyle</h4>
+            <ul>
+                <li>
+                    Creation of Marker Class module for each required data type (crime, pothole, divvy, etc), with
+                    tailored
+                    functionality for each.
+                </li>
+                <li>
+                    Creation of MapManager class which adds a layer of abstraction to the leaflets Map and associated
+                    layers.
+                    Manages all levels of layers, from layer groups, to individual layers
+                </li>
+
+            </ul>
+
+            <h4>Lorenzo</h4>
+            <ul>
+                <li>Creation of class database and creation of queries to retrieve data</li>
+                <li>Creation of functions to filter and manage the retrieved data</li>
+            </ul>
+
+            <h4>Matthias</h4>
+            <ul>
+                <li>Implemented UI</li>
+                <li>Created framework dummy functions according to our design decisions</li>
+            </ul>
+        </div>
+        <h2>
+            <a href="APP/index.html">Go To The Application!</a>
+        </h2>
+
+    </section>
+
+</div>
+
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+    <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+    </footer>
+</div>
 
 
-
-  </body>
+</body>
 </html>
