Intitial implementation of computing perimeter around the path

--- a/APP/index.html
+++ b/APP/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 
+
     <!-- Leaflet and D3-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -44,7 +45,7 @@
 		<div id="divmapcontrol"></div>
 	</div>
 
-	<div id="divmap"></div>
+	<div id="divmap" style="position: relative;"></div>
 
 </body>
 
