--- a/APP/index.html
+++ b/APP/index.html
@@ -18,6 +18,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="data/xml2json.js"></script>
 
     <!-- Awesome-Markers for cool markers -->
     <script src="js/leaflet.awesome-markers.js"></script>
