adding functionality to control groups of markers

--- a/APP/index.html
+++ b/APP/index.html
@@ -41,6 +41,7 @@
     <script src="framework/markers/AbandonedVehicleMarker.js"></script>
     <script src="framework/markers/CrimeMarker.js"></script>
     <script src="framework/markers/CTAMarker.js"></script>
+    <script src="framework/markers/LightsOutMarker.js"></script>
     <script src="framework/markers/PotholeMarker.js"></script>
     <script src="framework/markers/SimpleMarker.js"></script>
     <script src="framework/markers/markers.js"></script>
