--- a/APP/index.html
+++ b/APP/index.html
@@ -46,6 +46,8 @@
     <script src="framework/markers/SimpleMarker.js"></script>
     <script src="framework/markers/markers.js"></script>
 
+    <script src="framework/weather.js"></script>
+
     <!-- Database -->
     <script src="data/database.js"></script>
 
@@ -58,8 +60,9 @@
 		<div id="divmenu"></div>
 		<div id="divmapcontrol"></div>
 	</div>
-
-	<div id="divmap" style="position: relative;"></div>
+    <div id="weather" style="height:20%; width:15%; position: absolute; left:12%; z-index:10; background:black; opacity:0.7"></div>
+	<div id="divmap" style="position: relative;">
+    </div>
 
 </body>
 
