minor change in controller + status report week 2

--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
             <li>Matthias Untergassmair</li>
             <li>Krishna Bharadwaj</li>
         </ul>
+        
+		<h2>
+            <a href="APP/index.html">Go To The Application!</a>
+        </h2>
 
 
         <h2><a name="progress" class="anchor" href="#progress"><span class="octicon octicon-link"></span></a>Progress
         </h2>
 
-        <h3>Week1 - November 8, 2014</h3>
+        <h3>Week 1 - November 7, 2014</h3>
 
         <div class="week">
             <h4>Meeting 1,2 and 3</h4>
@@ -107,9 +111,36 @@
                 <li>Created framework dummy functions according to our design decisions</li>
             </ul>
         </div>
-        <h2>
-            <a href="APP/index.html">Go To The Application!</a>
-        </h2>
+        
+		
+		
+		<h3>Week 2 - November 14, 2014</h3>
+
+        <div class="week">
+            <h4>Meeting 1,2 and 3</h4>
+            <ul>
+            </ul>
+
+            <h4>Krishna</h4>
+            <ul>
+            </ul>
+
+            <h4>Kyle</h4>
+            <ul>
+            </ul>
+
+            <h4>Lorenzo</h4>
+            <ul>
+            </ul>
+
+            <h4>Matthias</h4>
+            <ul>
+				<li>Generic function for writing data to markers and identify updated data</li>
+				<li>Generic function for selecting layers</li>
+				<li>Code cleanup in Controller</li>
+            </ul>
+
+        </div>
 
     </section>
 
