--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 
             <h4>Krishna</h4>
             <ul>
+                <li>Updated the perimeter computation to optimize performance</li>
+                <li>Worked on alternative modes for routing, additional info on the paths<li>
             </ul>
 
             <h4>Kyle</h4>
