working on CTA data.

--- a/APP/index.html
+++ b/APP/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 
-
     <!-- Leaflet and D3-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -23,6 +22,10 @@
     <!-- Awesome-Markers for cool markers -->
     <script src="js/leaflet.awesome-markers.js"></script>
     <script src="js/IconsForMarkers.js"></script>  <!-- Some predefined Icons for later use -->
+
+    <!-- Animated Markers -->
+    <script src="js/IconsForMarkers.js"></script>
+    <script src="js/AnimatedMarker.js"></script>
 
     <!-- MapQuest for routing -->
     <script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-map.js?key=Fmjtd%7Cluurn962n0%2Cr0%3Do5-9w85da"></script>
