--- a/APP/index.html
+++ b/APP/index.html
@@ -33,7 +33,8 @@
 
 	<!-- Classes & Scripts -->
 	<script src="framework/MapManager.js"></script>
-    <script src="framework/ui.js"></script>
+    <script src="framework/ui/ui.js"></script>
+    <script src="framework/ui/level1button.js"></script>
     <script src="framework/controller.js"></script>
     <script src="framework/init.js"></script>
 
@@ -60,6 +61,7 @@
 <body onload="init()">
 
 	<div id="divui">
+		<div id="divdivvy"></div> <!-- DiVVy logo - ui must be reachable on big screen -->
 		<div id="divmenu"></div>
 		<div id="divmapcontrol"></div>
 	</div>
