--- a/APP/index.html
+++ b/APP/index.html
@@ -63,9 +63,10 @@
 		<div id="divmenu"></div>
 		<div id="divmapcontrol"></div>
 	</div>
-    <div id="weather" style="height:20%; width:15%; position: absolute; left:12%; z-index:10; background:black; opacity:0.7"></div>
-	<div id="divmap" style="position: relative;">
-    </div>
+	<div id="weather" style="height:20%; width:15%; position: absolute; left:12%; z-index:10; background:black; opacity:0.7"></div>
+	<div id="divmap" style="position: relative;"></div>
+	<div id="divgraphs1"></div>
+	<div id="divgraphs2"></div>
 
 </body>
 
