dynamic ui with 2 levels

--- a/APP/index.html
+++ b/APP/index.html
@@ -35,6 +35,7 @@
 	<script src="framework/MapManager.js"></script>
     <script src="framework/ui/ui.js"></script>
     <script src="framework/ui/level1button.js"></script>
+    <script src="framework/ui/level2button.js"></script>
     <script src="framework/controller.js"></script>
     <script src="framework/init.js"></script>
 
