--- a/APP/index.html
+++ b/APP/index.html
@@ -62,11 +62,18 @@
 <body onload="init()">
 
 	<div id="divui">
-		<div id="divdivvy"></div> <!-- DiVVy logo - ui must be reachable on big screen -->
+		<!-- DiVVy Logo -->
+		<div id="divdivvy">
+			<a href="https://www.divvybikes.com/" target="_blank"><img id="logo" src="img/divvy_logo.svg" alt="Divvy"></a>
+		</div> <!-- DiVVy logo - ui must be reachable on big screen -->
 		<div id="divmenu"></div>
+		<div id="divhome">
+			<a href="../"><img id="home" src="img/house28.svg" alt="Project Homepage"></a>
+		</div>
 		<div id="divmapcontrol"></div>
 	</div>
-    <div id="weather" style="height:20%; width:15%; position: absolute; left:12%; z-index:10; background:black; opacity:0.7"></div>
+
+    <div id="weather" style="height:20%; width:15%; position: absolute; left:17%; z-index:10; background:black; opacity:0.7"></div>
 	<div id="divmap" style="position: relative;">
     </div>
 
