Radius Control Added

--- a/APP/index.html
+++ b/APP/index.html
@@ -70,6 +70,7 @@
 		<div id="divhome">
 			<a href="../"><img id="home" src="img/house28.svg" alt="Project Homepage"></a>
 		</div>
+		<div id="divradiuscontrol"></div>
 		<div id="divmapcontrol"></div>
 	</div>
 
