--- a/APP/index.html
+++ b/APP/index.html
@@ -47,6 +47,7 @@
     <script src="framework/markers/LightsOutMarker.js"></script>
     <script src="framework/markers/PotholeMarker.js"></script>
     <script src="framework/markers/SimpleMarker.js"></script>
+    <script src="framework/markers/YelpMarker.js"></script>
     <script src="framework/markers/markers.js"></script>
 
     <script src="framework/weather.js"></script>
