now twitters are showing into console on click on yelp marker

--- a/APP/index.html
+++ b/APP/index.html
@@ -51,6 +51,7 @@
     <script src="framework/markers/markers.js"></script>
 
     <script src="framework/weather.js"></script>
+    <script src="framework/twitter.js"></script>
 
     <!-- Database -->
     <script src="data/database.js"></script>
