--- a/APP/index.html
+++ b/APP/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="data/xml2json.js"></script>
 
     <!-- Awesome-Markers for cool markers -->
+    <script src="js/Leaflet.MakiMarkers.js"></script>
     <script src="js/leaflet.awesome-markers.js"></script>
     <script src="js/IconsForMarkers.js"></script>  <!-- Some predefined Icons for later use -->
 
@@ -32,6 +33,7 @@
     <script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-routing.js?key=Fmjtd%7Cluurn962n0%2Cr0%3Do5-9w85da"></script>
 
 	<!-- Classes & Scripts -->
+    <script src="utils/AnglicizeString.js"></script>
 	<script src="framework/MapManager.js"></script>
     <script src="framework/ui.js"></script>
     <script src="framework/controller.js"></script>
