added week/month switch and title

--- a/APP/index.html
+++ b/APP/index.html
@@ -63,12 +63,13 @@
 
 	<div id="divui">
 		<!-- DiVVy Logo -->
-		<div id="divdivvy">
+		<div id="divheader">
 			<!--
 			<a href="https://www.divvybikes.com/" target="_blank"><img id="logo" src="img/divvy_logo.svg" alt="Divvy"></a>
 			-->
 		</div> <!-- DiVVy logo - ui must be reachable on big screen -->
 		<div id="divmenu"></div>
+		<div id="divtimerange"></div>
 		<div id="divhome">
 			<a href="../"><img id="home" src="img/house28.svg" alt="Project Homepage"></a>
 		</div>
