Styles for graphs

--- a/APP/index.html
+++ b/APP/index.html
@@ -35,6 +35,7 @@
 	<script src="framework/MapManager.js"></script>
     <script src="framework/ui.js"></script>
     <script src="framework/controller.js"></script>
+    <script src="framework/PieChart.js"></script>
     <script src="framework/init.js"></script>
 
 
