--- a/APP/index.html
+++ b/APP/index.html
@@ -36,6 +36,7 @@
     <script src="framework/ui.js"></script>
     <script src="framework/controller.js"></script>
     <script src="framework/PieChart.js"></script>
+    <script src="framework/BarChart.js"></script>
     <script src="framework/init.js"></script>
 
 
