--- a/APP/index.html
+++ b/APP/index.html
@@ -33,6 +33,8 @@
 
 	<!-- Classes & Scripts -->
 	<script src="framework/MapManager.js"></script>
+	<script src="framework/PieChart.js"></script>
+	<script src="framework/BarChart.js"></script>
     <script src="framework/ui/ui.js"></script>
     <script src="framework/ui/level1button.js"></script>
     <script src="framework/ui/level2button.js"></script>
