--- a/APP/index.html
+++ b/APP/index.html
@@ -49,6 +49,7 @@
     <script src="framework/markers/DivvyMarker.js"></script>
     <script src="framework/markers/AbandonedVehicleMarker.js"></script>
     <script src="framework/markers/CrimeMarker.js"></script>
+    <script src="framework/markers/BusStopMarker.js"></script>
     <script src="framework/markers/CTAMarker.js"></script>
     <script src="framework/markers/LightsOutMarker.js"></script>
     <script src="framework/markers/PotholeMarker.js"></script>
