--- a/APP/index.html
+++ b/APP/index.html
@@ -53,6 +53,7 @@
     <script src="framework/markers/CrimeMarker.js"></script>
     <script src="framework/markers/BusStopMarker.js"></script>
     <script src="framework/markers/CTAMarker.js"></script>
+    <script src="framework/markers/UberMarker.js"></script>
     <script src="framework/markers/LightsOutMarker.js"></script>
     <script src="framework/markers/PotholeMarker.js"></script>
     <script src="framework/markers/SimpleMarker.js"></script>
