--- a/APP/index.html
+++ b/APP/index.html
@@ -43,6 +43,7 @@
     <script src="framework/controller.js"></script>
     <script src="framework/PieChart.js"></script>
     <script src="framework/BarChart.js"></script>
+    <script src="framework/BarChart2.js"></script>
     <script src="framework/init.js"></script>
 
 
