--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 
             <h4>Kyle</h4>
             <ul>
-            </ul>
+               <li>
+               	Worked on managing the adding and removing of markers, keeping track of data as it updates in real-time.
+               </li>
+`            </ul>
 
             <h4>Lorenzo</h4>
             <ul>
@@ -159,6 +162,7 @@
 
             <h4>Kyle</h4>
             <ul>
+            	<li>Added Yelp data, support for other operation in the code base</li></li>
             </ul>
 
             <h4>Lorenzo</h4>
