--- a/APP/index.html
+++ b/APP/index.html
@@ -87,9 +87,10 @@
 		<div id="divmapcontrol"></div>
 	</div>
 	<div id="weather" style="height:20%; width:15%; position: absolute; left:17%; z-index:10;"></div>
+    <div id="twitter" style="height:20%; width:15%; position: absolute; left:17%; top:25%; z-index:10;"></div>
 	<div id="divmap" style="position: relative;"></div>
 	<div id="divgraphs1"></div>
-	<div id="divgraphs2"></div>
+	<!--<div id="divgraphs2"></div>-->
 
 </body>
 
