--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 
             <h4>Matthias</h4>
             <ul>
-
+                <li>Implemented dynamic UI</li>
+                <li>Added controller functionality for map interaction</li>
             </ul>
 
         </div>
